--- a/index.html
+++ b/index.html
@@ -115,18 +115,33 @@
             <div class="container">
                 <h2 class="about-title">Чем мы занимаемся</h2>
                 <ul class="about-list list">
-                    <li class="about-item"><img 
+                    <li class="about-item">
+                        <img 
                         src="./images/box1.jpg" 
                         alt="Набор кода на клавиатуре" 
-                        width="370"></li>
-                    <li class="about-item"><img 
+                        width="370">
+                        <div class="about-item-text">
+                            <p>Десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li class="about-item">
+                        <img 
                         src="./images/box2.jpg" 
                         alt="Разные виды дизайна" 
-                        width="370"></li>
-                    <li class="about-item"><img 
+                        width="370">
+                        <div class="about-item-text">
+                            <p>Мобильные приложения</p>
+                        </div>
+                    </li>
+                    <li class="about-item">
+                        <img 
                         src="./images/box3.jpg" 
                         alt="Выбор цвета на палитре цветов" 
-                        width="370"></li>
+                        width="370">
+                        <div class="about-item-text">
+                            <p>Дизайнерские решения</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -406,7 +421,11 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <p>Модальное окно</p>
-            <button type="button" class="modal-close-btn" data-modal-close><img src="./images/close.svg" alt="Закрытие модального окна"></button>
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg width="11" height="11">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
         </div>
     </div>
 
