--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,14 @@
                 <ul class="portfolio-projects-list list">
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project1.jpg" alt="Открытый ноутбук" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project1.jpg" alt="Открытый ноутбук" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Технокряк</h2>
                                 <p class="portfolio-projects-text">Веб-сайт</p>
@@ -78,7 +85,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project2.jpg" alt="Два баскетболиста" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project2.jpg" alt="Два баскетболиста" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                                 <p class="portfolio-projects-text">Дизайн</p>
@@ -87,7 +102,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project3.jpg" alt="Логотип ресторана" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project3.jpg" alt="Логотип ресторана" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Ресторан <span lang="en">Seafood</span></h2>
                                 <p class="portfolio-projects-text">Приложение</p>
@@ -96,7 +119,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project4.jpg" alt="Наушники" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project4.jpg" alt="Наушники" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Проект <span lang="en">Prime</span></h2>
                                 <p class="portfolio-projects-text">Маркетинг</p>
@@ -105,7 +136,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project5.jpg" alt="Две коробки" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project5.jpg" alt="Две коробки" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Проект <span lang="en">Boxes</span></h2>
                                 <p class="portfolio-projects-text">Приложение</p>
@@ -114,7 +153,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project6.jpg" alt="Монитор компьютера" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project6.jpg" alt="Монитор компьютера" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title" lang="en">Inspiration has no Borders</h2>
                                 <p class="portfolio-projects-text">Веб-сайт</p>
@@ -123,7 +170,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project7.jpg" alt="Открытый журнал" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project7.jpg" alt="Открытый журнал" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Издание <span>Limited Edition</span></h2>
                                 <p class="portfolio-projects-text">Дизайн</p>
@@ -132,7 +187,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project8.jpg" alt="Бирка" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project8.jpg" alt="Бирка" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title">Проект <span lang="en">LAB</span></h2>
                                 <p class="portfolio-projects-text">Маркетинг</p>
@@ -141,7 +204,15 @@
                     </li>
                     <li class="portfolio-projects-item">
                         <a class="portfolio-projects-link link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                            <img src="./images/project9.jpg" alt="Работа за ноутбуком" width="370">
+                            <div class="portfolio-projects-thumb">
+                                <img src="./images/project9.jpg" alt="Работа за ноутбуком" width="370">
+                                <div class="portfolio-projects-overlay">
+                                    <p class="portfolio-projects-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и
+                                        сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                             <div class="portfolio-projects-group">
                                 <h2 class="portfolio-projects-title" lang="en">Growing Business</h2>
                                 <p class="portfolio-projects-text">Приложение</p>
